# ILearn

./: .gitignore  .pre-commit-config.yaml  README.md  aux.ipynb  makefile  manage.py  pyproject.toml
content_creator/: prompts.py
ilearn_backend/: asgi.py  settings.py  urls.py  wsgi.py
services/OpenAI/: wrapper_context.py  wrapper_no_context.py
services/openai/prompts/: generate_content.py  generate_sections.py  sections_generator.py
services/openai/wrappers/: audio_generator.py  wrapper_context.py  wrapper_no_context.py
